--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "dev": "node --watch src/server.js",
     "start": "node src/server.js",
-    "test": "vitest",
-    "test:unit": "vitest run tests/unit",
-    "test:integration": "vitest run tests/integration",
-    "test:contract": "vitest run tests/contract",
-    "test:coverage": "vitest run --coverage",
+    "test": "NODE_ENV=test vitest",
+    "test:unit": "NODE_ENV=test vitest run tests/unit",
+    "test:integration": "NODE_ENV=test vitest run tests/integration",
+    "test:contract": "NODE_ENV=test vitest run tests/contract",
+    "test:coverage": "NODE_ENV=test vitest run --coverage",
     "migrate:up": "node src/db/migrate.js up",
     "migrate:down": "node src/db/migrate.js down",
     "lint": "eslint .",
