[003-reading-goals] Install Luxon date/time library (T001)
Added luxon dependency for timezone-aware deadline calculations.

Agent: implementor-a

--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "fastify": "^4.25.0",
     "fuzzball": "^2.2.3",
     "ioredis": "^5.8.2",
+    "luxon": "^3.7.2",
     "opossum": "^9.0.0",
     "pg": "^8.11.3",
     "pino": "^8.17.2",
