--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.0",
     "@faker-js/faker": "^10.1.0",
     "@mswjs/data": "^0.16.2",
     "@types/bcryptjs": "^2.4.6",
@@ -33,11 +34,13 @@
     "@vitest/coverage-v8": "^4.0.6",
     "@vitest/ui": "^4.0.6",
     "eslint": "^9",
+    "globals": "^16.5.0",
     "happy-dom": "^20.0.10",
     "msw": "^2.11.6",
     "prisma": "^6.18.0",
     "tsx": "^4.20.6",
     "typescript": "^5",
+    "typescript-eslint": "^8.46.2",
     "vitest": "^4.0.6"
   }
 }
