--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
     "test:coverage": "vitest --coverage",
     "test:watch": "vitest --watch",
     "test:run": "vitest run",
+    "db:setup": "./scripts/db-setup.sh setup",
+    "db:start": "./scripts/db-setup.sh start",
+    "db:stop": "./scripts/db-setup.sh stop",
+    "db:restart": "./scripts/db-setup.sh restart",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
+    "db:reset": "./scripts/db-setup.sh reset",
+    "db:shell": "./scripts/db-setup.sh shell",
+    "db:status": "./scripts/db-setup.sh status",
+    "db:logs": "./scripts/db-setup.sh logs",
     "api:dev": "tsx services/api/src/server.ts",
     "api:build": "tsc -p services/api/tsconfig.json"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "jsonwebtoken": "^9.0.2"
   },
