Fixed all of the tests by removing stale build files.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,9 @@ node_modules/
 # Task files
 # tasks.json
 # tasks/ 
+-e 
+# Compiled TypeScript files (should be in dist/ only)
+domain/**/*.js
+infrastructure/**/*.js
+lib/**/*.js
+application/**/*.js
