--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "api:build": "tsc -p services/api/tsconfig.json"
   },
   "dependencies": {
+    "@fastify/rate-limit": "^10.3.0",
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
