--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "tsx services/api/src/server.ts",
-    "build": "tsc -p services/api/tsconfig.json",
+    "dev:vercel": "vercel dev",
+    "build": "prisma generate",
+    "vercel-build": "prisma generate",
     "start": "node services/api/dist/server.js",
     "lint": "eslint",
     "test": "vitest",
@@ -29,6 +31,9 @@
   "dependencies": {
     "@fastify/rate-limit": "^10.3.0",
     "@prisma/client": "^6.18.0",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.6",
+    "@vercel/node": "^5.5.12",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
@@ -51,6 +56,7 @@
     "tsx": "^4.20.6",
     "typescript": "^5",
     "typescript-eslint": "^8.46.2",
+    "vercel": "^48.10.14",
     "vitest": "^4.0.6"
   }
 }
