--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,12 @@
       "maxDuration": 30
     }
   },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/[...path]"
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
