--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@vercel/node": "^5.5.12",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "papaparse": "^5.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
@@ -39,6 +40,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.1",
     "@vitest/coverage-v8": "^4.0.6",
     "@vitest/ui": "^4.0.6",
     "eslint": "^9",
